[gd_scene load_steps=20 format=3 uid="uid://dm3von0dunvn8"]

[ext_resource type="Script" uid="uid://cuy7c8xomhkjc" path="res://fight_scene.gd" id="1_g2itf"]
[ext_resource type="Script" uid="uid://kps2ltx7fysm" path="res://character_body_2d.gd" id="1_p0kih"]
[ext_resource type="Texture2D" uid="uid://iej853rchl31" path="res://testguy-Sheet.png" id="2_g2itf"]
[ext_resource type="Script" uid="uid://dlihya5pjrmcq" path="res://camera_buddy.gd" id="3_i07bt"]
[ext_resource type="Script" uid="uid://b21fskdkkkqry" path="res://camera_2d.gd" id="4_a5tuv"]
[ext_resource type="Script" uid="uid://c1ldymxcbhsmf" path="res://rich_text_label.gd" id="5_rdelu"]
[ext_resource type="Texture2D" uid="uid://dptynnepub61f" path="res://442432.jpg" id="6_3b6xf"]

[sub_resource type="PhysicsMaterial" id="PhysicsMaterial_0e48y"]

[sub_resource type="CanvasTexture" id="CanvasTexture_0hol4"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_q6r6c"]
size = Vector2(2421, 263)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_epypp"]
size = Vector2(476, 1127.06)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_0hol4"]
size = Vector2(35.9069, 60.3591)

[sub_resource type="AtlasTexture" id="AtlasTexture_rj586"]
atlas = ExtResource("2_g2itf")
region = Rect2(0, 0, 80, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_4d7sh"]
atlas = ExtResource("2_g2itf")
region = Rect2(80, 0, 80, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_ir8iy"]
atlas = ExtResource("2_g2itf")
region = Rect2(160, 0, 80, 128)

[sub_resource type="SpriteFrames" id="SpriteFrames_hqns4"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_rj586")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_4d7sh")
}, {
"duration": 0.5,
"texture": SubResource("AtlasTexture_ir8iy")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_4d7sh")
}],
"loop": true,
"name": &"IDLE",
"speed": 5.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_kdubu"]
size = Vector2(844, 63.5)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_g2itf"]
bg_color = Color(0.783523, 0.783523, 0.783523, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_i07bt"]
bg_color = Color(0.933327, 3.27289e-06, 9.62615e-07, 1)

[node name="FightScene" type="Node2D"]
script = ExtResource("1_g2itf")

[node name="StaticBody2D4" type="StaticBody2D" parent="."]
position = Vector2(1672, -66)
physics_material_override = SubResource("PhysicsMaterial_0e48y")

[node name="Sprite2D" type="Sprite2D" parent="StaticBody2D4"]
modulate = Color(1.64848e-06, 0.404267, 0.169, 1)
position = Vector2(-615, 237.5)
scale = Vector2(3290, 267)
texture = SubResource("CanvasTexture_0hol4")

[node name="CollisionShape2D" type="CollisionShape2D" parent="StaticBody2D4"]
position = Vector2(-589.5, 240)
shape = SubResource("RectangleShape2D_q6r6c")

[node name="Walls" type="StaticBody2D" parent="."]
position = Vector2(1618, -823)
physics_material_override = SubResource("PhysicsMaterial_0e48y")

[node name="CollisionShape2D" type="CollisionShape2D" parent="Walls"]
position = Vector2(-1945, 454.063)
shape = SubResource("RectangleShape2D_epypp")

[node name="CollisionShape2D2" type="CollisionShape2D" parent="Walls"]
position = Vector2(849, 396)
shape = SubResource("RectangleShape2D_epypp")

[node name="Player1" type="CharacterBody2D" parent="."]
unique_name_in_owner = true
z_index = 1
position = Vector2(18, -116)
scale = Vector2(4.31672, 4.35607)
script = ExtResource("1_p0kih")

[node name="CollisionShape2D" type="CollisionShape2D" parent="Player1"]
position = Vector2(2.89572, 3.32047)
shape = SubResource("RectangleShape2D_0hol4")

[node name="JumpBufferTimer" type="Timer" parent="Player1"]
wait_time = 0.2
one_shot = true

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="Player1"]
position = Vector2(3.01155, -5.05043)
scale = Vector2(0.6, 0.6)
sprite_frames = SubResource("SpriteFrames_hqns4")
animation = &"IDLE"
autoplay = "IDLE"

[node name="Player2" type="CharacterBody2D" parent="."]
unique_name_in_owner = true
z_index = 1
position = Vector2(588, -104)
scale = Vector2(4.31672, 4.35607)
script = ExtResource("1_p0kih")

[node name="CollisionShape2D" type="CollisionShape2D" parent="Player2"]
position = Vector2(3.01155, 3.21391)
shape = SubResource("RectangleShape2D_0hol4")

[node name="JumpBufferTimer" type="Timer" parent="Player2"]
wait_time = 0.2
one_shot = true

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="Player2"]
position = Vector2(3.01155, -5.05043)
scale = Vector2(0.6, 0.6)
sprite_frames = SubResource("SpriteFrames_hqns4")
animation = &"IDLE"
autoplay = "IDLE"

[node name="CameraBuddy" type="CharacterBody2D" parent="."]
position = Vector2(389, -292)
script = ExtResource("3_i07bt")

[node name="Camera2D" type="Camera2D" parent="CameraBuddy"]
position = Vector2(-1.99997, 91)
scale = Vector2(1.95473, 2.2029)
script = ExtResource("4_a5tuv")

[node name="RichTextLabel" type="RichTextLabel" parent="CameraBuddy/Camera2D"]
offset_left = -268.579
offset_top = -129.829
offset_right = -228.579
offset_bottom = -89.8287
script = ExtResource("5_rdelu")

[node name="CollisionShape2D" type="CollisionShape2D" parent="CameraBuddy"]
position = Vector2(7, -574)
shape = SubResource("RectangleShape2D_kdubu")

[node name="HealthBarP2" type="ProgressBar" parent="CameraBuddy"]
offset_left = 87.0
offset_top = -174.0
offset_right = 505.0
offset_bottom = -147.0
theme_override_styles/background = SubResource("StyleBoxFlat_g2itf")
theme_override_styles/fill = SubResource("StyleBoxFlat_i07bt")
value = 40.0
show_percentage = false

[node name="HealthBarP1" type="ProgressBar" parent="CameraBuddy"]
offset_left = -503.0
offset_top = -174.0
offset_right = -85.0
offset_bottom = -147.0
theme_override_styles/background = SubResource("StyleBoxFlat_g2itf")
theme_override_styles/fill = SubResource("StyleBoxFlat_i07bt")
value = 40.0
fill_mode = 1
show_percentage = false

[node name="Background" type="Sprite2D" parent="."]
z_index = -2
position = Vector2(1131.5, -436)
scale = Vector2(1.41406, 1.17037)
texture = ExtResource("6_3b6xf")

[node name="MatchTimer" type="Timer" parent="."]
